# Mass-Transfer2-Project

./: .gitignore  Approach.md  CLAUDE.md  README.md  compare.md  future.md  problem_statement.md  pyproject.toml  requirements.txt
mass_transfer/core/: COUNTERCURRENT_README.md  CROSSCURRENT_README.md  EQUILIBRIUM_README.md  README.md  countercurrent.py  crosscurrent.py  equilibrium.py
mass_transfer/gui/: README.md  __init__.py  __main__.py  animation_tab.py  comparison_tab.py  data_input_tab.py  heatmap_tab.py  home_tab.py  main_window.py  simulation_tab.py  surrogate_tab.py  theme.py  ui_helpers.py
mass_transfer/ml/: DATA_GENERATOR_README.md  NEURAL_NET_README.md  OPTIMIZATION_README.md  README.md  __init__.py  data_generator.py  optimization.py
mass_transfer/resources/data/: default_tie_lines.json  problem_1.json
mass_transfer/viz/: README.md  animations.py  heatmaps.py  ternary_plots.py
src/: __init__.py
src/core/: __init__.py  countercurrent.py  equilibrium.py
src/gui/: __main__.py  animation_tab.py  comparison_tab.py  data_input_tab.py  heatmap_tab.py  main_window.py  simulation_tab.py  surrogate_tab.py
src/ml/: data_generator.py  neural_net.py
src/viz/: __init__.py  animations.py  heatmaps.py  surfaces.py  ternary_plots.py
tests/: test_countercurrent.py  test_crosscurrent.py  test_equilibrium.py  test_neural_net.py
